--- a/options/options.css
+++ b/options/options.css
@@ -1,4 +1,4 @@
-table {
+body {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -17,26 +17,13 @@ tbody td {
     border-bottom: 1px solid #cccccc;
 }
 
-tbody td:first-child {
+tbody td {
     border-left: 1px solid #cccccc;
-    border-right: 1px solid #cccccc;
-}
-
-tbody td:last-child {
-    border-right: 1px solid #cccccc;
-}
-
-tbody td[pass] {
-    border-left: 1px dotted #cccccc;
     border-right: 1px solid #cccccc;
 }
 
 tbody td input {
     width: 80px;
-}
-
-tbody td img {
-    vertical-align: middle;
 }
 
 tbody tr[default_user='true'] {
@@ -66,6 +53,7 @@ input[type="text"] {
 img {
     width: 24px;
     height: 24px;
+    vertical-align: middle;
 }
 
 .tooltip {
@@ -104,4 +92,8 @@ img {
 .tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
+}
+
+.pure-menu {
+    margin: 2em 0 0 0;
 }
